Adjusted test window permissions and added Beam number in Get Performance Test Result report. version 2.0.0 Date: 2023-02-11

--- a/GD.FinishingSystem.WEB/Views/Rulo/GetPerformanceTestResult.cshtml
+++ b/GD.FinishingSystem.WEB/Views/Rulo/GetPerformanceTestResult.cshtml
@@ -13,6 +13,14 @@
                 @Html.DisplayFor(model => model.FirstOrDefault().Category)
             </td>
         </tr>
+        <tr>
+            <th style="color: white; background: #808080;">
+                @Html.DisplayNameFor(model => model.Beam)
+            </th>
+            <th colspan="2">
+                @Html.DisplayFor(model => model.FirstOrDefault().Beam)
+            </th>
+        </tr>
         <tr style="color: #fff; background: black;">
             <th>
                 @Html.DisplayNameFor(model => model.ParameterName)
