Added functionality to view batch information from Guven's database. This change is a complement to what was added on the date 2023-02-16. Date: 2023-03-10 v2.0.1

--- a/GD.FinishingSystem.WEB/Views/Rulo/Index.cshtml
+++ b/GD.FinishingSystem.WEB/Views/Rulo/Index.cshtml
@@ -189,11 +189,11 @@
         {
             var color = "bgcolor=transparent";
             if (!string.IsNullOrWhiteSpace(item.BatchNumbers))
-                color = "bgcolor=FFC300";
+                color = "bgcolor=ffc300"; //Amarillo
             else if (item.CanContinue)
-                color = "bgcolor=66ff66";
+                color = "bgcolor=66ff66"; //Verde
             else if (item.TestCategoryCode.Contains(" X", StringComparison.InvariantCultureIgnoreCase)) //Ok X or Fail X
-                color = "bgcolor=ff6666";
+                color = "bgcolor=ff6666"; //Rojo
 
         <tr @color id="@("row" + @item.RuloID)">
             <td>
