--- a/GD.FinishingSystem.WEB/Views/Rulo/Delete.cshtml
+++ b/GD.FinishingSystem.WEB/Views/Rulo/Delete.cshtml
@@ -73,6 +73,12 @@
             @Html.DisplayFor(model => model.Width)
         </dd>
         <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.WeavingLength)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.WeavingLength)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.EntranceLength)
         </dt>
         <dd class="col-sm-10">
