--- a/GD.FinishingSystem.WEB/Views/Shared/_Layout.cshtml
+++ b/GD.FinishingSystem.WEB/Views/Shared/_Layout.cshtml
@@ -25,6 +25,20 @@
         }
     </style>
 
+    <style type="text/css">
+        .loader {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            width: 100%;
+            background: rgba(0,0,0,0.50) url(content/loading.gif) no-repeat center center;
+            z-index: 10000;
+        }
+    </style>
+
 </head>
 <body class="sb-nav-fixed">
     @{
