Added the Inspection Cutting Length column from the Guven database, added the difference between final meters minus samples. Date 2023-07-21 v2.0.3

--- a/GD.FinishingSystem.WEB/Views/Account/RoleManager.cshtml
+++ b/GD.FinishingSystem.WEB/Views/Account/RoleManager.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<string>
 @{
-    string[] FormList = new string[] { "Rulo", "RuloProcess", "DefinitionProcess", "TestCategory", "Machine", "Sample", "Piece", "Period", "Authorize", "RuloMigration", "SystemPrinter", "Users", "Report", "RuloTest", "FinishMetersManually", "PerformanceTestReport" }; /*PDFReport*/
+    string[] FormList = new string[] { "Rulo", "RuloProcess", "DefinitionProcess", "TestResult", "TestCategory", "Machine", "Sample", "Piece", "Period", "Authorize", "RuloMigration", "SystemPrinter", "Users", "Report", "RuloTest", "FinishMetersManually", "PerformanceTestReport" }; /*PDFReport*/
 
     ViewData["Title"] = "Authorize  ";
     Layout = "~/Views/Shared/_Layout.cshtml";
