--- a/GD.FinishingSystem.WEB/Views/Shared/_Layout.cshtml
+++ b/GD.FinishingSystem.WEB/Views/Shared/_Layout.cshtml
@@ -23,6 +23,10 @@
             line-height: 1.5; /* If Placeholder of the input is moved up, rem/modify this. */
             border-radius: 3px;
         }
+
+        tr th {
+            vertical-align: middle;
+        }
     </style>
 
     <style type="text/css">
