The date and search filters by Rulo ID were modified. Formulas were added in the meters of fabric. Changed data extraction to extract with a stored procedure instead of EF Core and changed pagination to handle it from SQL. Date 2023-08-09. v2.0.4

--- a/GD.FinishingSystem.WEB/Views/Rulo/Details.cshtml
+++ b/GD.FinishingSystem.WEB/Views/Rulo/Details.cshtml
@@ -45,7 +45,8 @@
             @Html.DisplayNameFor(model => model.IsToyota)
         </dt>
         <dd class="col-sm-10">
-            @Html.Raw(Model.IsToyota ? "YES" : "NO")
+@*            @Html.Raw(Model.IsToyota ? "YES" : "NO")*@
+            @Html.DisplayFor(model => model.IsToyota)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.PieceCount)
@@ -93,19 +94,20 @@
             @Html.DisplayNameFor(model => model.IsWaitingAnswerFromTest)
         </dt>
         <dd class="col-sm-10">
-            @Html.Raw(Model.IsWaitingAnswerFromTest ? "YES" : "NO")
+            @*@Html.Raw(Model.IsWaitingAnswerFromTest ? "YES" : "NO")*@
+            @Html.DisplayFor(model => model.IsWaitingAnswerFromTest)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.OriginID)
+            @Html.DisplayNameFor(model => model.Origin)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.OriginID)
+            @Html.DisplayFor(model => model.Origin)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Observations)
+            @Html.DisplayNameFor(model => model.RuloObservations)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Observations)
+            @Html.DisplayFor(model => model.RuloObservations)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.TestCategoryCode)
@@ -117,7 +119,8 @@
             @Html.DisplayNameFor(model => model.CanContinue)
         </dt>
         <dd class="col-sm-10">
-            @Html.Raw(Model.CanContinue ? "YES" : "NO")
+            @*@Html.Raw(Model.CanContinue ? "YES" : "NO")*@
+            @Html.DisplayFor(model => model.CanContinue)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.TestResultAuthorizer)
