--- a/GD.FinishingSystem.WEB/Views/Rulo/Delete.cshtml
+++ b/GD.FinishingSystem.WEB/Views/Rulo/Delete.cshtml
@@ -46,7 +46,8 @@
             @Html.DisplayNameFor(model => model.IsToyota)
         </dt>
         <dd class="col-sm-10">
-            @Html.Raw(Model.IsToyota ? "YES" : "NO");
+            @*@Html.Raw(Model.IsToyota ? "YES" : "NO");*@
+            @Html.DisplayFor(model => model.IsToyota);
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.PieceCount)
@@ -100,19 +101,20 @@
             @Html.DisplayNameFor(model => model.IsWaitingAnswerFromTest)
         </dt>
         <dd class="col-sm-10">
-            @Html.Raw(Model.IsWaitingAnswerFromTest ? "YES" : "NO")
+            @*@Html.Raw(Model.IsWaitingAnswerFromTest ? "YES" : "NO")*@
+            @Html.DisplayFor(model=> model.IsWaitingAnswerFromTest)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.OriginID)
+            @Html.DisplayNameFor(model => model.Origin)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.OriginID)
+            @Html.DisplayFor(model => model.Origin)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Observations)
+            @Html.DisplayNameFor(model => model.RuloObservations)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Observations)
+            @Html.DisplayFor(model => model.RuloObservations)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.TestCategoryCode)
@@ -124,7 +126,8 @@
             @Html.DisplayNameFor(model => model.CanContinue)
         </dt>
         <dd class="col-sm-10">
-            @Html.Raw(Model.CanContinue ? "YES" : "NO")
+            @*@Html.Raw(Model.CanContinue ? "YES" : "NO")*@
+            @Html.DisplayFor(model => model.CanContinue)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.TestResultAuthorizer)
